--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "breakpoint-sass": "^2.7.1",
+    "bootstrap-sass": "^3.4.1",
+    "sass-flex-mixin": "^1.0.3",
+    "rfs": "^9.0.3"
+  }
 }
