--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "bootstrap-sass": "^3.4.1",
     "sass-flex-mixin": "^1.0.3",
     "rfs": "^9.0.3"
+  },
+  "devDependencies": {
+    "wow": "wowjs#^1.1.2"
   }
 }
