--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/alanlb/technowl-site#readme",
   "devDependencies": {
+    "animate.css": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "gulp-watch": "^5.0.1",
